objects/SLCA2__CA_CalendarToken__c.object
<CustomObject>
    <description>Store list of tokens for calendars</description>
    <fields>
        <fullName>SLCA2__CA_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to CA_Calendar</description>
        <label>CA_Calendar</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_CalendarTokens</relationshipLabel>
        <relationshipName>CA_CalendarTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLCA2__Domain__c</fullName>
        <description>Domain that used for this token</description>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__UserLogin__c</fullName>
        <description>Name of user (better to store all data in one place and not give additional access to User table for Site profile)</description>
        <label>UserLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User for used for connection</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CA_CalendarTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLCA2__key__c</fullName>
        <description>secure key for token</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__pwd__c</fullName>
        <description>Encrypted Password</description>
        <label>Pwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA_CalendarToken</label>
    <nameField>
        <label>CA_CalendarToken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_CalendarTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>